--- a/plant_calendar/plant_calendar.html
+++ b/plant_calendar/plant_calendar.html
@@ -7,6 +7,13 @@
   <link rel="stylesheet" href="style.css">
   <script src="script.js"></script>
 </head>
+  
+<div id="frost-date-container">
+  <label for="frost-date-input">Last Frost Date:</label>
+  <input type="date" id="frost-date-input" />
+  <button id="update-frost-date">Update Calendar</button>
+</div>
+
 <body>
   <div id="calendar-container">
     <!-- Calendar will be dynamically generated here -->
@@ -41,3 +48,4 @@
   <button id="clear-session-btn">Clear Session</button>
 </body>
 </html>
+
