--- a/plant_calendar/plant_calendar.html
+++ b/plant_calendar/plant_calendar.html
@@ -19,6 +19,16 @@
     <!-- Calendar will be dynamically generated here -->
   </div>
   
+  <div id="plant-selector">
+  <h3>Select plants</h3>
+  <div id="plant-checkboxes"></div>
+</div>
+
+<div id="selected-plants">
+  <h3>Selected plants</h3>
+  <ul id="selected-plants-list"></ul>
+</div>
+  
   <form id="custom-plant-form">
     <h2>Add Custom Plant</h2>
     <label for="plant-name">Plant Name:</label>
@@ -48,4 +58,5 @@
   <button id="clear-session-btn">Clear Session</button>
 </body>
 </html>
+
 
