--- a/plant_calendar/plant_calendar.html
+++ b/plant_calendar/plant_calendar.html
@@ -19,13 +19,8 @@
     <!-- Calendar will be dynamically generated here -->
   </div>
   
-  <div id="plant-selector">
-  <h3>Select plants</h3>
-  <div id="plant-checkboxes"></div>
-</div>
-
-<div id="selected-plants">
-  <h3>Selected plants</h3>
+<div id="selected-plants-container">
+  <h3>Selected Plants:</h3>
   <ul id="selected-plants-list"></ul>
 </div>
   
@@ -58,5 +53,6 @@
   <button id="clear-session-btn">Clear Session</button>
 </body>
 </html>
+
 
 
