--- a/plant_calendar/plant_calendar.html
+++ b/plant_calendar/plant_calendar.html
@@ -6,7 +6,6 @@
   <title>Plant Calendar</title>
   <link rel="stylesheet" href="style.css">
 </head>
-  
 
 <body>
 
@@ -20,10 +19,15 @@
     <!-- Calendar will be dynamically generated here -->
   </div>
   
-<div id="selected-plants-container">
-  <h3>Selected Plants:</h3>
-  <ul id="selected-plants-list"></ul>
-</div>
+  <div id="plant-selection-container">
+    <h2>Select Plants to Display</h2>
+    <div id="plant-options"></div>
+  
+    <h3>Selected Plants</h3>
+    <ul id="selected-plants-list"></ul>
+  
+    <button id="clear-selection-btn">Clear All Selections</button>
+  </div>
   
   <form id="custom-plant-form">
     <h2>Add Custom Plant</h2>
@@ -55,6 +59,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
