--- a/plant_calendar/plant_calendar.html
+++ b/plant_calendar/plant_calendar.html
@@ -15,14 +15,16 @@
   <button id="update-frost-date">Update Calendar</button>
 </div>
 
-  <div id="calendar-container">
-    <!-- Calendar will be dynamically generated here -->
-  </div>
-  
-  <div id="plant-selection-container">
-    <h2>Select Plants to Display</h2>
-    <div id="plant-options"></div>
-    <button id="clear-selection-btn">Clear All Selections</button>
+  <div id="app-layout">
+    <div id="calendar-container">
+      <!-- Calendar will be dynamically generated here -->
+    </div>
+    
+    <div id="plant-selection-container">
+      <h2>Select Plants to Display</h2>
+      <div id="plant-options"></div>
+      <button id="clear-selection-btn">Clear All Selections</button>
+    </div>
   </div>
   
   <form id="custom-plant-form">
@@ -55,6 +57,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
