--- a/plant_calendar/plant_calendar.html
+++ b/plant_calendar/plant_calendar.html
@@ -20,7 +20,7 @@
       <!-- Calendar will be dynamically generated here -->
     </div>
     
-    <div id="plant-selection-container">
+    <div id="selection-container">
       <h2>Select Plants to Display</h2>
       <div id="plant-options"></div>
       <button id="clear-selection-btn">Clear All Selections</button>
@@ -57,6 +57,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
