--- a/plant_calendar/plant_calendar.html
+++ b/plant_calendar/plant_calendar.html
@@ -21,6 +21,8 @@
     </div>
     
     <div id="selection-container">
+      <h2>Select Icons</h2>
+      <div id="icon-set-options"></div>
       <h2>Select Plants to Display</h2>
       <div id="plant-options"></div>
       <button id="clear-selection-btn">Clear All Selections</button>
@@ -57,6 +59,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
